fix(sidenav-fab-example):removed overflow:auto; since there is no need for it
 #6937

--- a/src/material-examples/sidenav-fab/sidenav-fab-example.css
+++ b/src/material-examples/sidenav-fab/sidenav-fab-example.css
@@ -14,10 +14,6 @@
   overflow: visible;
 }
 
-.example-scrolling-content {
-  overflow: auto;
-}
-
 .example-fab {
   position: absolute;
   right: 20px;
